src/public/stylesheets/index.less
/* app/client/index.less */

//import bootstrap
@import "bootstrap.less";


// rules

html { min-height: 100%; }

body {
  background-image: url('/images/bg-VM.jpg');
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: 100%;
  background-position: center top;
}

.container {
  margin: 0 auto;
  max-width: 800px;

  .row {
    margin-top: 20px;
  }
}

#logo {
  img {
    width: 100px;
    content:url("/images/dr-logo.svg");
  }
}

#heading {
  text-align: center;
  margin-bottom: 20px;
}

.session-buttons {
  margin: auto;
  max-width: 300px;

  .or {
    padding-top: 15px;
    padding-bottom: 15px;
    text-align: center;
  }
  .hline { text-decoration: line-through; color: lightgrey; }
  .or-text { font-weight: bold; }
}

#highscore-table {
  thead {
    background-color: #f5f5f5;
  }
}

audio.asset, .assets {
  display: none;
}

#alternative-container {
  margin: 14px;
  display: none;
}

@-webkit-keyframes countdown-animation {
  from { font-size: 15em; }
  to   { font-size: 6em; }
}
@-moz-keyframes countdown-animation {
  from { font-size: 15em; }
  to   { font-size: 6em; }
}
@-o-keyframes countdown-animation {
  from { font-size: 15em; }
  to   { font-size: 6em; }
}
@keyframes countdown-animation {
  from { font-size: 15em; }
  to   { font-size: 6em; }
}

.sound-duel-countdown {
  // Speed up animations on iPhone and Android (force GPU acceleration)
  // See: http://chrissilich.com/blog/fix-css-animation-slow-or-choppy-in-mobile-browsers/
  -webkit-transform: translateZ(0);

  -webkit-animation : countdown-animation 1s ease 4;
  -moz-animation    : countdown-animation 1s ease 4;
  -o-animation      : countdown-animation 1s ease 4;
  animation         : countdown-animation 1s ease 4;

  text-align: center;
  font-size: 6em;

  height:      300px;
  line-height: 300px;
}

// @media only screen and (max-width: @screen-sm-max) {
//  	@import "../custom-tiny.less";
// }

// @media only screen and (min-width: @screen-sm-min) {
// 	@import "../custom-small.less";
// }

@media only screen and (min-width: @screen-sm-min) {
	body {
		background-image: url('/images/bg-VM-lg.jpg');
	}
}

